# llm_from_scratch

./: .gitignore  Makefile  makefile.mk  pyproject.toml
part_1/: attn_mask.py  attn_numpy_demo.py  block.py  demo_mha_shapes.py  demo_visualize_multi_head.py  ffn.py  multi_head.py  orchestrator.py  pos_encoding.py  single_head.py  vis_utils.py
part_1/tests/: test_attn_math.py
part_2/: dataset.py  model_gpt.py  orchestrator.py  tokenizer.py  train.py  utils.py
part_3/: attn_modern.py  block_modern.py  demo_generate.py  kv_cache.py  model_modern.py  orchestrator.py  rmsnorm.py  rope_custom.py  swiglu.py  tokenizer.py  utils.py
part_4/: orchestrator.py
part_5/: orchestrator.py
part_6/: orchestrator.py
part_7/: orchestrator.py
part_8/: orchestrator.py
part_9/: orchestrator.py
